cargo-features = ["profile-rustflags"]

[package]
name = "rasciize"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2"
image = "0.25.9"
ordered-float = "5.1.0"


[profile.release]
strip = true
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 1
rustflags = ["-Z", "fmt-debug=none", "-C", "target-cpu=native"]
lto = "fat"

[profile.release.build-override]
strip = true
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 1
rustflags = ["-Z", "fmt-debug=none", "-C", "target-cpu=native"]
