cargo-features = ["profile-rustflags"]

[package]
name = "rasciize"
version = "0.1.0"
edition = "2024"

[features]
progress = []

[dependencies]
ab_glyph = "0.2"
image = "0.25.9"
ordered-float = "5.1.0"

[profile.release]
strip = true
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 1
panic = "abort"
rustflags = ["-Z", "fmt-debug=none", "-C", "target-cpu=native", "-C", "target-feature=+crt-static", "-Z", "share-generics"]
lto = "fat"

[profile.release.build-override]
strip = true
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 1
rustflags = ["-Z", "fmt-debug=none", "-C", "target-cpu=native", "-Z", "share-generics"]

[profile.release.package."*"]
strip = true
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
rustflags = ["-C", "target-cpu=native", "-Z", "share-generics"]

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
rustflags = ["-C", "target-cpu=native", "-Z", "share-generics"]

[profile.dev.package."*"]
opt-level = 3
rustflags = ["-C", "target-cpu=native", "-Z", "share-generics"]
